--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,53 +1,86 @@
 name: master
 
 on:
-   push:
-      paths-ignore:
-         - 'doc/**'
-         - 'documentation/**'
-         - '*.md'
-         - '*.yml'
-      branches:
-         - master
+  push:
+    paths-ignore:
+      - 'doc/**'
+      - 'documentation/**'
+      - '*.md'
+      - '*.yml'
+    branches:
+      - master
 
 jobs:
-   linux:
-      runs-on: ubuntu-latest
-      steps:
-         -  name: Checkout the repo
-            uses: actions/checkout@v2
-            with:
-               fetch-depth: 0
+  linux:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-         -  name: Setup JDK
-            uses: actions/setup-java@v1
-            with:
-               java-version: '11'
+      - name: Setup JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: '11'
 
-         -  name: Run tests
-            run: ./gradlew check
+      - name: Run tests
+        run: ./gradlew check
 
-   macos:
-      runs-on: macos-latest
-      steps:
-         -  name: Checkout the repo
-            uses: actions/checkout@v2
-            with:
-               fetch-depth: 0
+      - name: Bundle the build report
+        if: failure()
+        run: find . -type d -name 'reports' | zip -@ -r build-reports.zip
 
-         -  name: Run macos tests
-            run: ./gradlew macosX64Test
+      - name: Upload the build report
+        if: failure()
+        uses: actions/upload-artifact@master
+        with:
+          name: error-report
+          path: build-reports.zip
 
-   windows:
-      runs-on: windows-latest
-      steps:
-         -  name: Checkout the repo
-            uses: actions/checkout@v2
-            with:
-               fetch-depth: 0
+  macos:
+    runs-on: macos-latest
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-         -  name: Run tests
-            run: ./gradlew mingwX64Test --scan
+      - name: Run macos tests
+        run: ./gradlew macosX64Test
+
+      - name: Bundle the build report
+        if: failure()
+        run: find . -type d -name 'reports' | zip -@ -r build-reports.zip
+
+      - name: Upload the build report
+        if: failure()
+        uses: actions/upload-artifact@master
+        with:
+          name: error-report
+          path: build-reports.zip
+
+  windows:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Run tests
+        run: ./gradlew mingwX64Test
+
+      - name: Bundle the build report
+        if: failure()
+        run: find . -type d -name 'reports' | zip -@ -r build-reports.zip
+
+      - name: Upload the build report
+        if: failure()
+        uses: actions/upload-artifact@master
+        with:
+          name: error-report
+          path: build-reports.zip
 
 env:
-   GRADLE_OPTS: -Dorg.gradle.configureondemand=true -Dorg.gradle.parallel=false -Dkotlin.incremental=false -Dorg.gradle.jvmargs="-Xmx3g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8"
+  GRADLE_OPTS: -Dorg.gradle.configureondemand=true -Dorg.gradle.parallel=false -Dkotlin.incremental=false -Dorg.gradle.jvmargs="-Xmx3g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8"
