--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -39,7 +39,7 @@ jobs:
           path: build-reports.zip
 
   macos:
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v2
