--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -47,6 +47,12 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup JDK
+        uses: actions/setup-java@v3
+        with:
+           distribution: 'zulu'
+           java-version: '11'
+
       - name: Run macos tests
         run: ./gradlew macosX64Test
 
@@ -68,6 +74,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - name: Setup JDK
+        uses: actions/setup-java@v3
+        with:
+           distribution: 'zulu'
+           java-version: '11'
 
       - name: Run tests
         run: ./gradlew mingwX64Test
