--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
-          java-version: '11'
+          distribution: 'temurin'
+          java-version: '17'
 
       - name: Run tests
         run: ./gradlew check
@@ -50,8 +50,8 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v3
         with:
-           distribution: 'zulu'
-           java-version: '11'
+           distribution: 'temurin'
+           java-version: '17'
 
       - name: Run macos tests
         run: ./gradlew macosX64Test
@@ -78,8 +78,8 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v3
         with:
-           distribution: 'zulu'
-           java-version: '11'
+           distribution: 'temurin'
+           java-version: '17'
 
       - name: Run tests
         run: ./gradlew mingwX64Test
